--- a/Team9/Views/Songs/Edit.cshtml
+++ b/Team9/Views/Songs/Edit.cshtml
@@ -79,7 +79,7 @@
         </div>
 
         <div class="form-group">
-            @Html.LabelFor(model => model.SongArtist, htmlAttributes: new { @class = "control-label col-md-2" })
+            @Html.LabelFor(model => model.SongGenre, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
                 @Html.ListBox("SelectedGenre", (MultiSelectList)ViewBag.AllGenres, new { @class = "form-control" })
             </div>
