--- a/Team9/Views/Albums/AlbumDetailedSearch.cshtml
+++ b/Team9/Views/Albums/AlbumDetailedSearch.cshtml
@@ -4,7 +4,7 @@
     ViewBag.Title = "AlbumDetailedSearch";
 }
 
-<h2>AlbumDetailedSearch</h2>
+<h2>Album Advanced Search</h2>
 
 
 @using (Html.BeginForm("AlbumSearchResults", "Albums", FormMethod.Get))
