--- a/Team9/Views/Artists/ArtistDetailedSearch.cshtml
+++ b/Team9/Views/Artists/ArtistDetailedSearch.cshtml
@@ -4,7 +4,7 @@
     ViewBag.Title = "ArtistDetailedSearch";
 }
 
-<h2>Detailed Search</h2>
+<h2>Artist Advanced Search</h2>
 
 
 @using (Html.BeginForm("ArtistSearchResults", "Artists", FormMethod.Get))
