--- a/Team9/Views/Songs/SongDetailedSearch.cshtml
+++ b/Team9/Views/Songs/SongDetailedSearch.cshtml
@@ -4,7 +4,7 @@
     ViewBag.Title = "SongDetailedSearch";
 }
 
-<h2>SongDetailedSearch</h2>
+<h2>Song Advanced Search</h2>
 
 
 @using (Html.BeginForm("SongSearchResults", "Songs", FormMethod.Get))
