--- a/Team9/Views/Purchases/Details.cshtml
+++ b/Team9/Views/Purchases/Details.cshtml
@@ -10,10 +10,26 @@
 
 @Html.AntiForgeryToken()
 
+    if (Model.error != null)
+    {
+        <div class="alert alert-warning">
+            <strong>
+                @Model.error
+            </strong>
+        </div>
+    }
+
 <h2>Checkout</h2>
 
 <div class="form-horizontal">
     <dl class="dl-horizontal">
+        <dt>
+            @Html.LabelFor(model => model.purchaserName , htmlAttributes: new { @class = "control-label col-md-2" })
+        </dt>
+        <dd>
+            @Html.DisplayFor(model => model.purchaserName )
+        </dd>
+
         <dt>
             @Html.LabelFor(model => model.subtotal, htmlAttributes: new { @class = "control-label col-md-2" })
         </dt>
