--- a/Team9/Views/Purchases/orderHistory.cshtml
+++ b/Team9/Views/Purchases/orderHistory.cshtml
@@ -18,7 +18,7 @@
             @Html.DisplayNameFor(model => model.PurchaseItem.PurchaseItemSong.SongName)
         </th>
         <th>
-            @Html.DisplayNameFor(model => model.PurchaseItem.PurchaseItemSong.SongAlbum.AlbumName)
+            @Html.DisplayNameFor(model => model.PurchaseItem.PurchaseItemSong.SongAlbums)
         </th>
         <th>
             @Html.DisplayNameFor(model => model.PurchaseItem.PurchaseItemSong.SongArtist)
@@ -55,7 +55,10 @@
                     @Html.DisplayFor(modelItem => item.PurchaseItem.PurchaseItemSong.SongName)
                 </td>
                 <td>
-                    @Html.DisplayFor(modelItem => item.PurchaseItem.PurchaseItemSong.SongAlbum.AlbumName)
+                    @foreach (Album a in item.PurchaseItem.PurchaseItemSong.SongAlbums)
+                    {
+                        <span>@a.AlbumName *</span>
+                    }
                 </td>
                 <td>
                     @foreach (Artist a in item.PurchaseItem.PurchaseItemSong.SongArtist)
