--- a/Team9/Views/Purchases/MyMusic.cshtml
+++ b/Team9/Views/Purchases/MyMusic.cshtml
@@ -32,7 +32,7 @@
             @Html.DisplayNameFor(model => model.SongGenre)
         </th>
         <th>
-            @Html.DisplayNameFor(model => model.SongAlbum)
+            @Html.DisplayNameFor(model => model.SongAlbums )
         </th>
 
 
@@ -58,7 +58,10 @@
             </td>
 
             <td>
-                @Html.DisplayFor(modelItem => item.SongAlbum.AlbumName)
+                @foreach (Album a in item.SongAlbums)
+                {
+                    <span>@a.AlbumName*</span>
+                }
             </td>
 
 
