--- a/Team9/Views/Songs/Index.cshtml
+++ b/Team9/Views/Songs/Index.cshtml
@@ -42,7 +42,7 @@
             @Html.DisplayNameFor(model => model.Song.SongGenre)
         </th>
         <th>
-            @Html.DisplayNameFor(model => model.Song.SongAlbum.AlbumName )
+            @Html.DisplayNameFor(model => model.Song.SongAlbums)
         </th>
         <th>
             @Html.DisplayNameFor(model => model.Song.SongArtist )
@@ -68,7 +68,10 @@
             }            
         </td>
         <td>
-            @Html.DisplayFor(modelItem => item.Song.SongAlbum.AlbumName )
+            @foreach (Album a in item.Song.SongAlbums)
+                {
+                <span>@a.AlbumName *</span>
+            }
         </td>
         <td>
             @foreach (Artist a in item.Song.SongArtist)
