--- a/Team9/Views/Songs/Edit.cshtml
+++ b/Team9/Views/Songs/Edit.cshtml
@@ -64,9 +64,9 @@
         </div>
 
         <div class="form-group">
-            @Html.LabelFor(model => model.SongAlbum, htmlAttributes: new { @class = "control-label col-md-2" })
+            @Html.LabelFor(model => model.SongAlbums, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.DropDownList("AlbumID", (SelectList) ViewBag.AllAlbums, new { @class = "form-control" })
+                @Html.ListBox("SelectedAlbums", (MultiSelectList) ViewBag.AllAlbums, new { @class = "form-control" })
             </div>
         </div>
 
