--- a/Team9/Views/Shared/_LoginPartial.cshtml
+++ b/Team9/Views/Shared/_LoginPartial.cshtml
@@ -20,6 +20,9 @@
         <li>@Html.ActionLink("Reports", "ReportHome", "Purchases")</li>
 
         <li>@Html.ActionLink("Manage Roles", "Index", "RoleAdmin")</li>
+
+        <li>@Html.ActionLink("Manage Customers", "manageCustomers")</li>
+
         <li><a href="javascript:document.getElementById('logoutForm').submit()">Log off</a></li>
     </ul>
     }
