CheckCards Fix, Report fixes

--- a/Team9/Views/Purchases/GenreReport.cshtml
+++ b/Team9/Views/Purchases/GenreReport.cshtml
@@ -4,9 +4,9 @@
     ViewBag.Title = "Index";
 }
 
-<h2>Song Revenues</h2>
+<h2>Genre Revenues</h2>
 
-<h2>Songs</h2>
+<h2>Genres</h2>
 
 <table class="table">
     <tr>
